--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Jay Skript And The Domsters</title>
+    <script src="https://cdn.bootcdn.net/ajax/libs/modernizr/2010.07.06dev/modernizr.min.js"></script>
+    <link rel="stylesheet" href="styles/basic.css" media="screen"/>
 </head>
 <body>
-
+<header>
+    <img src="images/logo.gif" alt="Jay Skript and the Domsters"/>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="photos.html">Photos</a></li>
+            <li><a href="live.html">Live</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<article>
+    <h1>Welcome</h1>
+    <p id="intro">
+        Welcome to the official website of Jay Skript and the Domsters. Here, you can <a href="about.html">learn more
+        about the band</a>, view <a href="photos.html">photos of the band</a>, find out about <a href="live.html">tour
+        dates</a> and <a href="contact.html">get in touch with the band</a>.
+    </p>
+</article>
+<script src="scripts/global.js"></script>
 </body>
 </html>
